fix: change some layout and spacings

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -593,10 +593,6 @@ body {
   display: none !important;
 }
 
-.bd {
-  border: 1px solid #f00;
-}
-
 #container {
   min-height: 100%;
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
@@ -1368,10 +1364,6 @@ table.table tbody td:last-child {
   margin-top: 0.75rem;
 }
 
-.mt-1 {
-  margin-top: 0.25rem;
-}
-
 .line-clamp-1 {
   overflow: hidden;
   display: -webkit-box;
@@ -1505,10 +1497,6 @@ table.table tbody td:last-child {
   flex-wrap: wrap;
 }
 
-.items-start {
-  align-items: flex-start;
-}
-
 .items-center {
   align-items: center;
 }
@@ -1533,6 +1521,11 @@ table.table tbody td:last-child {
   gap: 1.5rem;
 }
 
+.gap-x-3 {
+  -moz-column-gap: 0.75rem;
+       column-gap: 0.75rem;
+}
+
 .gap-x-6 {
   -moz-column-gap: 1.5rem;
        column-gap: 1.5rem;
@@ -1540,11 +1533,6 @@ table.table tbody td:last-child {
 
 .gap-y-4 {
   row-gap: 1rem;
-}
-
-.gap-x-3 {
-  -moz-column-gap: 0.75rem;
-       column-gap: 0.75rem;
 }
 
 .space-x-1 > :not([hidden]) ~ :not([hidden]) {
@@ -1710,6 +1698,10 @@ table.table tbody td:last-child {
   padding: 2rem;
 }
 
+.p-3 {
+  padding: 0.75rem;
+}
+
 .px-0 {
   padding-left: 0px;
   padding-right: 0px;
@@ -1766,16 +1758,8 @@ table.table tbody td:last-child {
   padding-right: 2.75rem;
 }
 
-.pt-0 {
-  padding-top: 0px;
-}
-
 .pt-4 {
   padding-top: 1rem;
-}
-
-.text-left {
-  text-align: left;
 }
 
 .text-center {
@@ -1820,10 +1804,6 @@ table.table tbody td:last-child {
 
 .uppercase {
   text-transform: uppercase;
-}
-
-.leading-none {
-  line-height: 1;
 }
 
 .tracking-wider {
